<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1.0" >

        <Button
            android:id="@+id/button_state1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/ic_home_selector"
            android:gravity="center"
            android:singleLine="true"
            android:tag="@string/tag_1"
            android:text="@string/text_tab_home"
            android:textColor="@color/text_service_color"
            android:textSize="14dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1.0" >

        <Button
            android:id="@+id/button_state2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/ic_subject_selector"
            android:gravity="center"
            android:singleLine="true"
            android:tag="@string/tag_2"
            android:text="@string/text_tab_subject"
            android:textColor="@color/text_service_color"
            android:textSize="14dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1.0" >

        <Button
            android:id="@+id/button_state3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/ic_mien_selector"
            android:gravity="center"
            android:singleLine="true"
            android:tag="@string/tag_3"
            android:text="@string/text_tab_mien"
            android:textColor="@color/text_service_color"
            android:textSize="14dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1.0" >

        <Button
            android:id="@+id/button_state4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/ic_mine_selector"
            android:gravity="center"
            android:singleLine="true"
            android:tag="@string/tag_4"
            android:text="@string/text_tab_mine"
            android:textColor="@color/text_service_color"
            android:textSize="14dp" />
    </FrameLayout>

</merge>